Ajout des classes JS de base

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8" />
     <title>Salle de concert</title>
-    <link href="style.css" rel="stylesheet" type="text/css"/>
+    <link href="./CSS/MainStyle.css" rel="stylesheet" type="text/css"/>
 </head>
 
     
 
-    <script src="script.js"></script>
+    <script src="./JS/MainScript.js"></script>
 </body>
 </html>
