Ajout des settings en CSS + des controllers en JS

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
-<html>
-<head>
+<html lang="fr">
+  <head>
     <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Salle de concert</title>
-    <link href="./CSS/MainStyle.css" rel="stylesheet" type="text/css"/>
-</head>
-
-    
-
-    <script src="./JS/MainScript.js"></script>
-</body>
+    <link href="./CSS/MainStyle.css" rel="stylesheet" type="text/css" />
+  </head>
+  <body>
+    <header class="header-section">
+      <!-- Navbar pour administrateur -->
+      <button class="login-btn">Administrateur</button>
+    </header>
+    <main>
+      <!-- Une Section recherche -->
+      <!-- Une Section affichage des salles  -->
+    </main>
+    <footer>
+      <!-- Certif -->
+    </footer>
+    <script src="./JS/Controllers/GetAllSalle.js"></script>
+  </body>
 </html>
