--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Salle de concert</title>
-    <link href="./CSS/MainStyle.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="./CSS/MainStyle.css" />
   </head>
   <body>
     <header class="header-section">
