Ajout du footer

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -11,12 +11,13 @@
       <!-- Navbar pour administrateur -->
       <button class="login-btn">Administrateur</button>
     </header>
-    <main>
+    <main class="main-section">
       <!-- Une Section recherche -->
       <!-- Une Section affichage des salles  -->
     </main>
-    <footer>
+    <footer class="footer-section">
       <!-- Certif -->
+      <p class="text-footer">Ne pas copier, merci bien !</p>
     </footer>
     <script src="./JS/Controllers/GetAllSalle.js"></script>
   </body>
