--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -13,7 +13,22 @@
     </header>
     <main class="main-section">
       <!-- Une Section recherche -->
+      <section class="section-recherche">
+        <div class="recherche-name">
+          <label for="nameSalle">Nom :</label>
+          <input type="text" id="nameSalle" name="nameSalle" />
+        </div>
+        <div class="recherche-city">
+          <label for="citySalle">Ville :</label>
+          <input type="text" id="citySalle" name="citySalle" />
+        </div>
+        <div class="recherche-styles">
+          <label for="stylesSalle">Style :</label>
+          <input type="c" id="citySalle" name="citySalle" />
+        </div>
+      </section>
       <!-- Une Section affichage des salles  -->
+      <section class="section-affiche-Salle"></section>
     </main>
     <footer class="footer-section">
       <!-- Certif -->
