--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -14,17 +14,29 @@
     <main class="main-section">
       <!-- Une Section recherche -->
       <section class="section-recherche">
-        <div class="recherche-name">
-          <label for="nameSalle">Nom :</label>
-          <input type="text" id="nameSalle" name="nameSalle" />
+        <div class="recherche-input">
+          <label for="nameSalle" class="recherche-label">Nom </label>
+          <input
+            type="text"
+            id="nameSalle"
+            name="nameSalle"
+            class="recherche-input"
+          />
         </div>
-        <div class="recherche-city">
-          <label for="citySalle">Ville :</label>
-          <input type="text" id="citySalle" name="citySalle" />
+        <div class="recherche-input">
+          <label for="citySalle" class="recherche-label">Ville </label>
+          <input
+            type="text"
+            id="citySalle"
+            name="citySalle"
+            class="recherche-input"
+          />
         </div>
-        <div class="recherche-styles">
-          <label for="stylesSalle">Style :</label>
-          <input type="c" id="citySalle" name="citySalle" />
+        <div class="recherche-input">
+          <label for="stylesSalle" class="recherche-label">Style </label>
+          <select name="stylesSalle" id="stylesSalle" class="recherche-input">
+            <option value="">test</option>
+          </select>
         </div>
       </section>
       <!-- Une Section affichage des salles  -->
@@ -34,6 +46,6 @@
       <!-- Certif -->
       <p class="text-footer">Ne pas copier, merci bien !</p>
     </footer>
-    <script src="./JS/Controllers/GetAllSalle.js"></script>
   </body>
+  <script src="./JS/Controllers/GetAllSalle.js"></script>
 </html>
