Ajout du GetAllSalle OK

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -40,38 +40,7 @@
         </div>
       </section>
       <!-- Une Section affichage des salles  -->
-      <section class="section-affiche-Salle">
-        <div class="card">
-          <div class="infos-card">
-            <!-- nom, ville, styles, capacités -->
-            <p class="info-salle">Nom : <span id="nom-salle"></span></p>
-            <p class="info-salle">
-              Localisation : <span id="ville-salle"></span>
-            </p>
-            <p class="info-salle">Style(s) : <span id="styles-salle"></span></p>
-            <p class="info-salle">
-              Capacitées : <span id="capacite-salle"></span>
-            </p>
-          </div>
-          <button class="more-info-btn">Détails</button>
-        </div>
-        <div class="card">
-          <div class="infos-card">
-            <!-- nom, ville, styles, capacités -->
-            <p class="info-salle">Nom : <span id="nom-salle">test</span></p>
-            <p class="info-salle">
-              Localisation : <span id="ville-salle">test</span>
-            </p>
-            <p class="info-salle">
-              Style(s) : <span id="styles-salle">test</span>
-            </p>
-            <p class="info-salle">
-              Capacitées : <span id="capacite-salle">test</span>
-            </p>
-          </div>
-          <button class="more-info-btn">Détails</button>
-        </div>
-      </section>
+      <section class="section-affiche-Salle" id="section-affichage"></section>
     </main>
     <footer class="footer-section">
       <!-- Certif -->
