Ajustement de la mainPage

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -9,6 +9,7 @@
   <body>
     <header class="header-section">
       <!-- Navbar pour administrateur -->
+      <h1 class="title-main-page">Gestion salles</h1>
       <button class="login-btn">Administrateur</button>
     </header>
     <main class="main-section">
