--- a/FrontEnd/Pages/DetailsPage.html
+++ b/FrontEnd/Pages/DetailsPage.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title id="nom-salle">Document</title>
   </head>
   <body></body>
+  <script src="../JS/Controllers/GetSalleById.js"></script>
 </html>
