Affichage des styles disponible dans le select en HTML OK

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -36,7 +36,7 @@
         <div class="recherche-input">
           <label for="stylesSalle" class="recherche-label">Style </label>
           <select name="stylesSalle" id="stylesSalle" class="recherche-input">
-            <option value="">test</option>
+            <option></option>
           </select>
         </div>
       </section>
