Implantation de la barre de recherche OK (seulement en console)

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -15,27 +15,29 @@
     <main class="main-section">
       <!-- Une Section recherche -->
       <section class="section-recherche">
-        <div class="recherche-input">
+        <div class="div-recherche-input">
           <label for="nameSalle" class="recherche-label">Nom </label>
           <input
             type="text"
             id="nameSalle"
             name="nameSalle"
             class="recherche-input"
+            data-input=""
           />
         </div>
-        <div class="recherche-input">
+        <div class="div-recherche-input">
           <label for="citySalle" class="recherche-label">Ville </label>
           <input
             type="text"
             id="citySalle"
             name="citySalle"
             class="recherche-input"
+            data-input=""
           />
         </div>
-        <div class="recherche-input">
+        <div class="div-recherche-input">
           <label for="stylesSalle" class="recherche-label">Style </label>
-          <select name="stylesSalle" id="stylesSalle" class="recherche-input">
+          <select name="stylesSalle" id="stylesSalle" class="recherche-input" data-input="">
             <option></option>
           </select>
         </div>
