Fin de l'implémantation de la page principal (GetAll OK / FindBy OK)

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -37,9 +37,17 @@
         </div>
         <div class="div-recherche-input">
           <label for="stylesSalle" class="recherche-label">Style </label>
-          <select name="stylesSalle" id="stylesSalle" class="recherche-input" data-input="">
-            <option></option>
+          <select
+            name="stylesSalle"
+            id="stylesSalle"
+            class="recherche-input"
+            data-input=""
+          >
+            <option id="reset"></option>
           </select>
+        </div>
+        <div class="div-recherche-input">
+          <button id="btn-reset-search">Reset</button>
         </div>
       </section>
       <!-- Une Section affichage des salles  -->
