CSS pour la barre de recherche OK (pas responsive)

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -21,7 +21,7 @@
             type="text"
             id="nameSalle"
             name="nameSalle"
-            class="recherche-input"
+            class="recherche-input input-text"
             data-input=""
           />
         </div>
@@ -31,7 +31,7 @@
             type="text"
             id="citySalle"
             name="citySalle"
-            class="recherche-input"
+            class="recherche-input input-text"
             data-input=""
           />
         </div>
@@ -40,15 +40,13 @@
           <select
             name="stylesSalle"
             id="stylesSalle"
-            class="recherche-input"
+            class="recherche-input input-select"
             data-input=""
           >
-            <option id="reset"></option>
+            <option></option>
           </select>
         </div>
-        <div class="div-recherche-input">
-          <button id="btn-reset-search">Reset</button>
-        </div>
+        <button id="btn-reset-search">Reset</button>
       </section>
       <!-- Une Section affichage des salles  -->
       <section class="section-affiche-Salle" id="section-affichage"></section>
