Ajout de l'ID dans l'UR L pour le récup pour réaliser le GetById OK

--- a/FrontEnd/Pages/DetailsPage.html
+++ b/FrontEnd/Pages/DetailsPage.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title id="nom-salle">Document</title>
+    <title id="nom-salle">test</title>
   </head>
   <body></body>
   <script src="../JS/Controllers/GetSalleById.js"></script>
