--- a/FrontEnd/Pages/DetailsPage.html
+++ b/FrontEnd/Pages/DetailsPage.html
@@ -3,8 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title id="nom-salle">Document</title>
+    <title id="nom-salle"></title>
   </head>
-  <body></body>
-  <script src="../JS/Controllers/GetSalleById.js"></script>
+  <body>
+    <script src="..\JS\Models\Data\detailSalle.js"></script>
+    <script src="../JS/Models/Data/titreDetail.js"></script>
+    <script src="../JS/Controllers/GetSalleById.js"></script>
+    <script src="../JS/Models/Data/mapInteractive.js"></script>
+  </body>
 </html>
