Implémantation de la page détail OK (non responsive)

--- a/FrontEnd/Pages/DetailsPage.html
+++ b/FrontEnd/Pages/DetailsPage.html
@@ -19,39 +19,40 @@
       <button class="login-btn">Administrateur</button>
     </header>
     <main class="main-section-detail">
-      <h2 class="nom-salle description"></h2>
+      <h2 class="nom-salle description" data-adresse="nom"></h2>
       <section class="section-description">
         <div class="container container-description">
           <!-- Adresse -->
           <div class="container-adresse">
             <h3>Adresse :</h3>
-            <p class="p-description description"></p>
+            <p class="p-description description" data-adresse="adresse"></p>
             <div class="complement-adresse">
-              <p class="code-postal description"></p>
-              <p class="ville description"></p>
+              <p class="code-postal description" data-adresse="code"></p>
+              <p class="ville description" data-adresse="ville"></p>
             </div>
           </div>
           <!-- capacite -->
           <div class="container-autre">
             <h3>Capacité :</h3>
-            <p class="p-description description"></p>
+            <p class="p-description description" data-adresse="capacite"></p>
           </div>
           <!-- Disponible -->
           <div class="container-autre">
             <h3>SMAC :</h3>
-            <p class="p-description description"></p>
+            <p class="p-description description" data-adresse="smac"></p>
           </div>
           <!-- Styles -->
           <div class="container-styles">
             <h3>Style :</h3>
             <div class="tous-style">
-              <p class="p-description description"></p>
+              <p class="p-description description" data-adresse="style"></p>
             </div>
           </div>
         </div>
         <!-- Map -->
         <div class="container container-map" id="map"></div>
         <!-- Avis -->
+        <h3 class="title-avis">Avis :</h3>
         <div class="container container-avis">
           <!-- <div class="avis"> -->
           <!-- contient tous les avis  -->
