--- a/FrontEnd/Pages/DetailsPage.html
+++ b/FrontEnd/Pages/DetailsPage.html
@@ -15,7 +15,7 @@
   <body>
     <header class="header-section">
       <!-- Navbar pour administrateur -->
-      <h1 class="title-main-page">Gestion salles</h1>
+      <a href="../index.html" class="title-main-page">Gestion salles</a>
       <button class="login-btn">Administrateur</button>
     </header>
     <main class="main-section-detail">
