--- a/FrontEnd/Pages/DetailsPage.html
+++ b/FrontEnd/Pages/DetailsPage.html
@@ -60,7 +60,23 @@
           <!-- <p class="avis-date"></p> -->
           <!-- </div> -->
         </div>
-        <button class="btn-ajout-avis">Ajouter avis</button>
+        <button id="ajout-avis" class="btn-ajout-avis">Ajouter avis</button>
+      </section>
+      <section id="page-ajout-avis">
+        <div class="container-input-avis">
+          <form>
+            <label for="rating">Note (0-10):</label>
+            <input
+              type="number"
+              id="rating"
+              name="rating"
+              min="0"
+              max="10"
+              required
+            />
+            <button type="submit">Ajouter</button>
+          </form>
+        </div>
       </section>
     </main>
     <footer class="footer-section">
