--- a/FrontEnd/Pages/DetailsPage.html
+++ b/FrontEnd/Pages/DetailsPage.html
@@ -64,7 +64,7 @@
       </section>
       <section id="page-ajout-avis" class="visivility-hidden">
         <div class="container-input-avis">
-          <form class="form-ajout-avis">
+          <form class="form-ajout-avis" id="form-avis">
             <div class="div-form">
               <label for="rating" class="labelAvis">Note (0-10):</label>
               <input
@@ -96,4 +96,5 @@
     crossorigin=""
   ></script>
   <script src="../JS/Controllers/GetSalleById.js"></script>
+  <script src="../JS/Controllers/UpdateSalle.js"></script>
 </html>
