--- a/FrontEnd/Pages/DetailsPage.html
+++ b/FrontEnd/Pages/DetailsPage.html
@@ -64,24 +64,21 @@
       </section>
       <section id="page-ajout-avis" class="visivility-hidden">
         <div class="container-input-avis">
-          <form class="form-ajout-avis" id="form-avis">
-            <div class="div-form">
-              <label for="rating" class="labelAvis">Note (0-10):</label>
-              <input
-                type="number"
-                id="rating"
-                name="rating"
-                min="0"
-                max="10"
-                class="input-avis"
-                required
-              />
-            </div>
-            <div class="container-btn-avis">
-              <button class="btn-avis" data-add="annuler">Annuler</button>
-              <button class="btn-avis" data-add="ajouter">Ajouter</button>
-            </div>
-          </form>
+          <div class="div-form">
+            <label for="rating" class="labelAvis">Note (0-10):</label>
+            <input
+              type="number"
+              id="rating"
+              name="rating"
+              min="0"
+              max="10"
+              class="input-avis"
+            />
+          </div>
+          <div class="container-btn-avis">
+            <button class="btn-avis" data-add="annuler">Annuler</button>
+            <button class="btn-avis" data-add="ajouter">Ajouter</button>
+          </div>
         </div>
       </section>
     </main>
@@ -96,5 +93,5 @@
     crossorigin=""
   ></script>
   <script src="../JS/Controllers/GetSalleById.js"></script>
-  <script src="../JS/Controllers/UpdateSalle.js"></script>
+  <script type="module" src="../JS/Controllers/UpdateSalle.js"></script>
 </html>
