Réorganisation des fichiers JS => séparation des fetchs des controllers

--- a/FrontEnd/index.html
+++ b/FrontEnd/index.html
@@ -56,5 +56,5 @@
       <p class="text-footer">Ne pas copier, merci bien !</p>
     </footer>
   </body>
-  <script src="./JS/Controllers/GetAllSalle.js"></script>
+  <script type="module" src="./JS/Controllers/GetAllSalle.js"></script>
 </html>
