Réorganisation des fichiers JS => séparation des fetchs des controllers (GetSalleById) OK

--- a/FrontEnd/Pages/DetailsPage.html
+++ b/FrontEnd/Pages/DetailsPage.html
@@ -92,6 +92,6 @@
     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
     crossorigin=""
   ></script>
-  <script src="../JS/Controllers/GetSalleById.js"></script>
+  <script type="module" src="../JS/Controllers/GetSalleById.js"></script>
   <script type="module" src="../JS/Controllers/UpdateSalle.js"></script>
 </html>
